--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,6 +10,17 @@
       <h3><%= @book.name %> by <%= @book.author %></h3>
       <p class="justify"><%= @book.description %></p>
       <h4 class="text-right">$<%= @book.price.to_f / 100 %></h4>
+      <%= Rails.configuration.stripe[:publishable_key] %>
+      <%= form_tag buy_path(slug: @book.slug) do %>
+      <script
+          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-amount="<%= @book.price %>"
+          data-name="eStuk"
+          data-description="<%= @book.name %>"
+          data-email="<%= current_user.email %>">
+        </script>
+      <% end %>
     </div>
   </div>
 
